--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "proxy-api",
-  "version": "0.0.0",
+  "name": "simple-starterkit",
+  "version": "2.0.0",
+  "author": "Dino Baggio",
   "private": true,
   "scripts": {
     "start": "node ./dist/bin/server.js",
@@ -33,14 +34,22 @@
     ]
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.0.0",
     "express": "~4.16.1",
+    "express-validator": "^6.14.2",
     "hbs": "^4.2.0",
     "http-errors": "~1.6.3",
+    "i18n": "^0.15.1",
     "jade": "~1.11.0",
-    "morgan": "~1.9.1"
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
+    "morgan": "~1.9.1",
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.26.0",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.11.6",
