--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "node ./dist/bin/server.js",
     "dev": "nodemon",
     "build": "rm -R ./dist;babel src --out-dir dist",
-    "serve": "node ./dist/bin/server.js"
+    "serve": "node ./dist/bin/server.js",
+    "test": "mocha tests --require @babel/register --sort --exit",
+    "test:file": "mocha --require @babel/register --sort --exit"
   },
   "nodemonConfig": {
     "exec": "babel-node ./src/bin/server.js",
@@ -49,6 +51,7 @@
     "morgan": "~1.9.1",
     "mysql2": "^2.3.3",
     "sequelize": "^6.26.0",
+    "sequelize-paginate": "^1.1.6",
     "validator": "^13.7.0"
   },
   "devDependencies": {
@@ -59,6 +62,12 @@
     "@babel/preset-env": "^7.11.5",
     "@babel/register": "^7.11.5",
     "babel-node": "0.0.1-security",
-    "eslint": "^7.10.0"
+    "eslint": "^7.10.0",
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
+    "mocha": "^8.3.0",
+    "mocha-junit-reporter": "^2.0.0",
+    "mochawesome": "^6.1.1",
+    "nyc": "^15.1.0"
   }
 }
