--- a/package.json
+++ b/package.json
@@ -61,10 +61,11 @@
     "@babel/plugin-transform-runtime": "^7.11.5",
     "@babel/preset-env": "^7.11.5",
     "@babel/register": "^7.11.5",
+    "@faker-js/faker": "^7.6.0",
     "babel-node": "0.0.1-security",
-    "eslint": "^7.10.0",
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
+    "eslint": "^7.10.0",
     "mocha": "^8.3.0",
     "mocha-junit-reporter": "^2.0.0",
     "mochawesome": "^6.1.1",
