feat: - rabbit mq toggle feature

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,10 @@ DB_PORT=3306
 DB_USERNAME=
 DB_PASSWORD=
 DB_NAME=
+
+# RABBIT MQ
+ACTIVE_RABBITMQ= #yes/no
+RABBITMQ_HOST=
+RABBITMQ_PORT=
+RABBITMQ_USER=
+RABBITMQ_PASSWORD=
