--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,9 @@ RABBITMQ_HOST=
 RABBITMQ_PORT=
 RABBITMQ_USER=
 RABBITMQ_PASSWORD=
+
+# REDIS
+ACTIVE_REDIS= #yes/no
+REDIS_HOST=localhost
+REDIS_PORT=6380
+REDIS_PASSWORD=
